--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.20.0",
+    "jsonwebtoken": "8.5.1",
+    "react-cookies": "0.1.1",
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
